Fix scrollbar visibility issue

--- a/docs/src/components/sdk-support-table/sdk-support-table.module.scss
+++ b/docs/src/components/sdk-support-table/sdk-support-table.module.scss
@@ -3,7 +3,7 @@
   border: 1px solid rgb(204, 204, 204);
   font-size: 12px;
   margin: 10px 0;
-  overflow: scroll;
+  overflow: auto;
 
   td p {
     margin: 0;
