--- a/docs/src/components/sidebar/sidebar.module.scss
+++ b/docs/src/components/sidebar/sidebar.module.scss
@@ -30,7 +30,7 @@
     flex-grow: 1;
     align-items: flex-start;
     width: 100%;
-    overflow: scroll;
+    overflow: auto;
 
     ul {
       list-style-type: none;
